RESOLVED FIXED77895
Wheel event handler count not updated when adding handlers to the window
https://bugs.webkit.org/show_bug.cgi?id=77895
Summary Wheel event handler count not updated when adding handlers to the window
Anders Carlsson
Reported 2012-02-06 12:32:01 PST
Wheel event handler count not updated when adding handlers to the window
Attachments
Patch (9.85 KB, patch)
2012-02-06 12:33 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2012-02-06 12:33:18 PST
Anders Carlsson
Comment 2 2012-02-06 13:05:35 PST
Sami Kyöstilä
Comment 3 2014-03-14 09:36:03 PDT
FYI, looks like this patch got landed without tests for some reason.
Note You need to log in before you can comment on or make changes to this bug.