Wheel event handler count not updated when adding handlers to the window https://bugs.webkit.org/show_bug.cgi?id=77895

Reviewed by Dan Bernstein.

Source/WebCore:

Test: fast/events/wheelevent-handler-count.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::addEventListener):
(WebCore::DOMWindow::removeEventListener):
Update the wheel event count.

* testing/Internals.cpp:
(WebCore::Internals::wheelEventHandlerCount):
* testing/Internals.h:
* testing/Internals.idl:
Add wheelEventHandlerCount to window.internals.

LayoutTests:

* fast/events/wheelevent-handler-count-expected.txt: Added.
* fast/events/wheelevent-handler-count.html: Added.

Canonical link: https://commits.webkit.org/94764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106839 268f45cc-cd09-0410-ab3c-d52691b4dbfc