Source/WebCore/page/DOMWindow.cpp
@@ -1550,8 +1550,11 @@ bool DOMWindow::addEventListener(const AtomicString& eventType, PassRefPtr<Event
     if (!EventTarget::addEventListener(eventType, listener, useCapture))
         return false;
 
-    if (Document* document = this->document())
+    if (Document* document = this->document()) {
         document->addListenerTypeIfNeeded(eventType);
+        if (eventType == eventNames().mousewheelEvent)
+            document->didAddWheelEventHandler();
+    }
 
     if (eventType == eventNames().unloadEvent)
         addUnloadEventListener(this);
@@ -1571,6 +1574,11 @@ bool DOMWindow::removeEventListener(const AtomicString& eventType, EventListener
 {
     if (!EventTarget::removeEventListener(eventType, listener, useCapture))
         return false;
+
+    if (Document* document = this->document()) {
+        if (eventType == eventNames().mousewheelEvent)
+            document->didRemoveWheelEventHandler();
+    }
 
     if (eventType == eventNames().unloadEvent)
         removeUnloadEventListener(this);
